--- a/app/styles/ui/_vertical-segmented-control.scss
+++ b/app/styles/ui/_vertical-segmented-control.scss
@@ -77,15 +77,15 @@ fieldset.vertical-segmented-control {
       }
     }
 
-    // When the element is focused we rely on the border-radius that gets applied
-    // to outlined elements, so we should remove our custom border-radius to avoid
-    // small gaps appearing in the background caused by our border-radius being
-    // bigger than the one used for outlined elements.
-    &:focus {
-      border-radius: 0;
+    &:focus li {
+      &:first-child {
+        border-top-left-radius: var(--outlined-border-radius);
+        border-top-right-radius: var(--outlined-border-radius);
+      }
 
-      li {
-        border-radius: 0;
+      &:last-child {
+        border-bottom-left-radius: var(--outlined-border-radius);
+        border-bottom-right-radius: var(--outlined-border-radius);
       }
     }
   }
